--- a/SomeChess/wwwroot/css/output.css
+++ b/SomeChess/wwwroot/css/output.css
@@ -632,10 +632,6 @@ video {
   margin-top: 0px;
 }
 
-.mt-0\.5 {
-  margin-top: 0.125rem;
-}
-
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -1003,6 +999,7 @@ video {
   border-style: solid;
   height: 10vh;
   width: 400px;
+  min-height: 80px;
   border-radius: 15px;
   font-size: 250%;
   color: white;
@@ -1025,6 +1022,7 @@ video {
   transition: all 0.4s;
   border-style: solid;
   height: 10vh;
+  min-height: 80px;
   width: 400px;
   border-radius: 15px;
   font-size: 250%;
@@ -1076,6 +1074,8 @@ video {
   width: 30vw;
   height: 68vh;
   border: solid;
+  min-width: 450px;
+  min-height: 550px;
 }
 
 .chooseTime {
@@ -1290,4 +1290,8 @@ img {
   border-color: #98c66c;
   border-radius: 4px;
   box-shadow: 1px 1px 2px 4px #98c66c;
+}
+
+.highlighted {
+  box-shadow: 1px 1px 2px 4px #ff0000;
 }
