--- a/SomeChess/wwwroot/css/output.css
+++ b/SomeChess/wwwroot/css/output.css
@@ -628,8 +628,16 @@ video {
   margin-left: 2rem;
 }
 
+.mr-24 {
+  margin-right: 6rem;
+}
+
 .mt-0 {
   margin-top: 0px;
+}
+
+.mt-0\.5 {
+  margin-top: 0.125rem;
 }
 
 .mt-1 {
@@ -638,6 +646,10 @@ video {
 
 .mt-1\.5 {
   margin-top: 0.375rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mt-14 {
@@ -798,6 +810,10 @@ video {
   justify-content: flex-start;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -860,6 +876,10 @@ video {
 
 .text-start {
   text-align: start;
+}
+
+.text-end {
+  text-align: end;
 }
 
 .text-3xl {
@@ -999,7 +1019,7 @@ video {
   border-style: solid;
   height: 10vh;
   width: 400px;
-  min-height: 80px;
+  min-height: 90px;
   border-radius: 15px;
   font-size: 250%;
   color: white;
@@ -1022,7 +1042,7 @@ video {
   transition: all 0.4s;
   border-style: solid;
   height: 10vh;
-  min-height: 80px;
+  min-height: 90px;
   width: 400px;
   border-radius: 15px;
   font-size: 250%;
@@ -1079,19 +1099,12 @@ video {
 }
 
 .chooseTime {
-  background-color: var(--SecondBackgroundColor);
   display: flex;
-  position: absolute;
-  margin-left: 54.5vw;
-  width: 28vw;
-  border-radius: 10px;
-  height: 60vh;
-  margin-top: -67vh;
 }
 
 .chooseTime span {
+  margin-top: 0.2vh;
   color: rgb(242, 84, 84);
-  margin-left: 28vw;
   cursor: pointer;
 }
 
@@ -1130,8 +1143,10 @@ video {
   font-size: 300%;
   box-shadow: 0 0 20px white;
   color: white;
-  width: 10vw;
-  height: 6.5vh;
+  min-width: 250px;
+  min-height: 60px;
+  width: 15vw;
+  height: 8.5vh;
   border-radius: 10px;
   background-color: #283739;
   font-weight: 700;
@@ -1191,6 +1206,7 @@ video {
 .move-history {
   overflow: scroll;
   height: 53vh;
+  min-height: 380px;
 }
 
 .d-block {
