organized injects and usings

--- a/SomeChess/Components/Chessboard.razor
+++ b/SomeChess/Components/Chessboard.razor
@@ -1,6 +1,4 @@
-﻿@inject IJSRuntime JsRuntime;
-@inject NavigationManager NavMan;
-@using Microsoft.AspNetCore.Components.Web
+﻿@using Microsoft.AspNetCore.Components.Web
 @using SomeChess.Code.GameEngine.ChessImplementation
 @using SomeChess.Code.MatchMaking.ChessMatchImplementation
 @using SomeChess.Code.Social
@@ -10,6 +8,8 @@
 @using Microsoft.AspNetCore.Mvc.ModelBinding
 @using SomeChess.Code.MatchMaking
 @using SomeChess.Code
+@inject IJSRuntime JsRuntime;
+@inject NavigationManager NavMan;
 @inject NavigationManager NavigationManager
 @inject UserAuthentication social
 
